@@ -1,20 +1,7 @@
 AUX asterisk-java-0.2-build.xml.patch 652 RMD160 828551c4b3e7b498b39198c892c3acdfe4d8a7c5 SHA1 80039c1b168b6677a61af5133dad73b06fba46f0 SHA256 ea60582dea10d63b323103efc470d0776692256e801569312578403a561aaa8b
-MD5 0bf8f37a3f909c3bb0e38816ba416aec files/asterisk-java-0.2-build.xml.patch 652
-RMD160 828551c4b3e7b498b39198c892c3acdfe4d8a7c5 files/asterisk-java-0.2-build.xml.patch 652
-SHA256 ea60582dea10d63b323103efc470d0776692256e801569312578403a561aaa8b files/asterisk-java-0.2-build.xml.patch 652
 DIST asterisk-java-0.2-src.zip 381486 RMD160 172df9913a053102653a81f555c6312a15daf6a0 SHA1 95142d7408393c748a6e8ebbf9e2f5f1100a5bb2 SHA256 a84c3a48b9bcaf36e4fc48342b703987cfc4a6b5b518204b60d3e75d2a6f9bbd
+DIST asterisk-java-0.3-m2.tar.bz2 432936 RMD160 ecedb683ffb84f1acb4ad0c6df24e7eb48fbb602 SHA1 5513383a1a896fd7107f10381c0bfaa74c626ead SHA256 674e10ca4c9ba227cc2ac71f9fef48ae98170d1de258f31469fc1bc091db89b0
 EBUILD asterisk-java-0.2.ebuild 1274 RMD160 1df7e00021d9dec465a47998b5e5fd83d9bafc0b SHA1 d9ed0c43883457600a923f52c77d72c25236b4c7 SHA256 c672e8383e7f8d8a7bf934819be30d3b411e4d9c5fbece1badd5c414075384f4
-MD5 8cc6f1ddcd90191404dcd5ca5fa68eb3 asterisk-java-0.2.ebuild 1274
-RMD160 1df7e00021d9dec465a47998b5e5fd83d9bafc0b asterisk-java-0.2.ebuild 1274
-SHA256 c672e8383e7f8d8a7bf934819be30d3b411e4d9c5fbece1badd5c414075384f4 asterisk-java-0.2.ebuild 1274
-MISC ChangeLog 284 RMD160 27d589dfd85f5b714ebe64e7673d061a4c1dba82 SHA1 635f302d0e68d1b6f3d8cecf20b917339dec5a32 SHA256 88d67961dde8569a9c0258e8854fe347e8e47e4e8506f2ca506ea17aabbef0d4
-MD5 0fd3d2a4b6e057934ed8defe4db73b0d ChangeLog 284
-RMD160 27d589dfd85f5b714ebe64e7673d061a4c1dba82 ChangeLog 284
-SHA256 88d67961dde8569a9c0258e8854fe347e8e47e4e8506f2ca506ea17aabbef0d4 ChangeLog 284
+EBUILD asterisk-java-0.3_pre2.ebuild 1914 RMD160 81693e979794a7ad3db0501164ad22ced4b9bf14 SHA1 f967705a23b324bdac4cf4db962dc22f6a3225fd SHA256 d3198c75c1a01aa842583b6bbbe0889d38f204ffb3b341d0be9a8452f5c44dfb
+MISC ChangeLog 386 RMD160 741503bf7988b82feac60f05a430ddca2c76d081 SHA1 9f7438ddd5dcc1ee8f7e350f9d50d518195e8f07 SHA256 9cb97fbd91feddc261df1e554b24f277d1b2a5b97ae291194752a412bfaa8d00
 MISC metadata.xml 217 RMD160 6a03b58e975ef9766c1ba359b8cf73372aae1409 SHA1 9661e29f710f8b88d1ebad0d7cfa2716ae869b51 SHA256 00a5772b0da0819b665dba21d321e4e2393c818907d38678d179cafd5036c7f2
-MD5 a28ef1dbcd9ec5d985e36f5b538891b5 metadata.xml 217
-RMD160 6a03b58e975ef9766c1ba359b8cf73372aae1409 metadata.xml 217
-SHA256 00a5772b0da0819b665dba21d321e4e2393c818907d38678d179cafd5036c7f2 metadata.xml 217
-MD5 d4010852a9e9b747bb7dc13e83d498ea files/digest-asterisk-java-0.2 256
-RMD160 a6e0272e97944383458eb4a0f322b58d7b5e27f2 files/digest-asterisk-java-0.2 256
-SHA256 7decabbef07168fcc7253ca5f5a8db477c2b8c0a1812d348b13b1736774dc357 files/digest-asterisk-java-0.2 256
